--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,14 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission
+        android:name="android.permission.use_alert_window"
+        android:protectionLevel="normal" />
+
+    <permission
+        android:name="android.permission.use_alert_window"
+        android:protectionLevel="normal" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +22,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ViewPageTest"></activity>
+        <activity android:name=".clent.SearchActivity"></activity>
+
+        <receiver
+            android:name=".MyReceiver"
+            android:enabled="true"
+            android:exported="false" />
+
+        <service
+            android:name=".service.AidlTestService"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="android.permission.use_alert_window">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <action android:name="android.intent.action.AidlTestService" />
+            </intent-filter>
+        </service>
+
+        <activity android:name=".FileTest" />
+        <activity android:name=".ViewPageTest" />
         <activity android:name=".LoadActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +53,7 @@
         <activity
             android:name=".widget.ButtonClick"
             android:theme="@style/Theme.AppCompat.Dialog" />
-        <activity android:name=".NbPlus"></activity>
+        <activity android:name=".NbPlus" />
         <activity android:name=".question.QuestionActivity" />
         <activity android:name=".DrawActivity" />
         <activity android:name=".FileTestPage" />
@@ -34,15 +61,19 @@
         <activity android:name=".PopUpActivity" />
         <activity android:name=".QQChatActivity" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".SuspensionPage" />
 
         <service
             android:name=".service.OverlayService"
             android:enabled="true" />
-        <service android:name=".service.MyIntentService" android:enabled="true">
+        <service
+            android:name=".service.MyIntentService"
+            android:enabled="true">
             <intent-filter>
-                <action android:name="android.intent.action.startMyIntentService"/>
+                <action android:name="android.intent.action.startMyIntentService" />
             </intent-filter>
         </service>
+        <service android:name=".service.MyService" />
     </application>
 
 </manifest>
