--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,9 @@
 include ':app'
 rootProject.name = "Android"
+setBinding(new Binding([gradle: this]))
+evaluate(new File(
+        settingsDir.parentFile,
+        "my_flutter/.android/include_flutter.groovy"
+))
+include ':my_flutter'
+project(':my_flutter').projectDir = new File('../my_flutter')
